# adventofcode

./: day3.py  day7.py  day8.ipynb  day8.py  pyproject.toml  test.ipynb
2021/: all.ipynb  day1.py  day2.py  day4.py  day5.py  day6.py  day7.py  day8.ipynb  day9.ipynb
2023/: 1.go  2.go  3.go  4.go
2023/1/: 1.go
2023/10/: 10.go
2023/11/: 11.go  11.py
2023/12/: 12.go
2023/13/: 13.py
2023/15/: 15.go
2023/16/: 16.go
2023/3/: 3.go
2023/4/: 4.go
2023/5/: 5.go
2023/6/: 6.go
2023/7/: 7.go
2023/8/: 8.go
2023/9/: 9.go
