[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Alexey Shamrin <shamrin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pytesseract = "^0.3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
